--- a/index.html
+++ b/index.html
@@ -1,28 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <title>UI Clone Google</title>
 </head>
-
 <body>
     <header class="menu">
         <div class="menu_section left">
             <img class="menu_icon" src="./assets/burger-icon.svg" alt="Burguer icon">
-            <a class="menu_link">All</a>
+            <a class="menu_link active">All</a>
             <a class="menu_link">Images</a>
         </div>
 
         <div class="menu_section right">
+            <img class="menu_icon" src="./assets/more-icon.svg" alt="More icons">
             <div class="menu_profile">
-                <img class="menu_avatar" src="./assets/heisenberg.svg" alt="avatar">
                 <img class="menu_avatar--frame" src="./assets/circle-frame.svg" alt="frame">
+
+                <img class="menu_avatar" src="./assets/heisenberg.svg" alt="avatar">
             </div>
         </div>
     </header>
 
     <main>
-        
+        <div class="content">
+            <img class="content_logo" src="./assets/logo.png" alt="Google">
+            <input type="text" class="content_search"/>
+
+            <div class="content_offer">
+                by Felipe Rafael
+            </div>
+        </div>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <div class="footer_section footer_location">
+            <span>Brazil</span>
+        </div>
+        
+        <div class="footer_section footer_links">
+            <a >Settings</a>
+            <a >Privacy</a>
+            <a >Terms</a>
+        </div>
     </footer>
 </body>
+</html>
+
+
+
